# Physically-Based-Renderer

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md  build.sh  compile_commands.json  debug.sh  output.ppm  run.sh
src/: CMakeLists.txt  a.out  display.cpp  display.h  display_example.cpp  main.cpp  main.cpp.real
src/.ccls-cache/@@home@elliots@Documents@Elliot Swaim@Education@2024-2025 (Senior)@Spring@Physically Based Rendering@renderer@src/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@__sigset_t.h.blob  @usr@include@bits@types@clock_t.h.blob  (+155 more)
src/.ccls-cache/@home@elliots@Documents@Elliot Swaim@Education@2024-2025 (Senior)@Spring@Physically Based Rendering@renderer@src/: main.cpp  main.cpp.blob
src/pbrt/: CMakeLists.txt  aggregates.cpp  aggregates.h  camera.h  integrator.cpp  integrator.cpp~  integrator.h  interaction.h  light.h  materials.h  pbrt.h  primitive.cpp  primitive.h  ray.h  samplers.h  shapes.cpp  shapes.h
src/pbrt/cmd/: pbrt-test.cpp  pbrt.cpp
src/pbrt/cpu/: integrator.h  primitive.cpp  primitive.h
src/pbrt/math/: math.cpp  math.h  vecmath.h
src/pbrt/test/: check.h  sizes.cpp
src/pbrt/util/: CMakeLists.txt  benchmark.h  buffercache.cpp  buffercache.h  check.cpp  check.h  display.h  float.h  hash.h  math.h  parallel.cpp  parallel.h  transform.cpp  transform.h  vecmath.h
src/pbrt/util/.ccls-cache/@home@elliots@Documents@Elliot Swaim@Education@2024-2025 (Senior)@Spring@Physically Based Rendering@renderer/: src@pbrt@util@vecmath.h  src@pbrt@util@vecmath.h.blob
